@@ -35,7 +35,7 @@ public class JFlexParserUtil {
 	private static Pattern EMPTY_BODY_TAG_PATTERN = null;
 	private static Pattern JAVASCRIPT_PATTERN1 = null;
 	private static Pattern JAVASCRIPT_PATTERN2 = null;
-	private static Pattern NESTING_TAG_PATTERN = null;
+	private static Pattern NON_NESTING_TAG_PATTERN = null;
 	private static Pattern NON_TEXT_BODY_TAG_PATTERN = null;
 	private static Pattern NON_INLINE_TAG_PATTERN = null;
 	private static Pattern NON_INLINE_TAG_START_PATTERN = null;
@@ -43,7 +43,7 @@ public class JFlexParserUtil {
 	private static Pattern TAG_PATTERN = null;
 	private static Pattern WIKI_LINK_PATTERN = null;
 	private static final String emptyBodyTagPattern = "(br|div|hr|td|th)";
-	private static final String nestingTagPattern = "(div|font|span)";
+	private static final String nonNestingTagPattern = "(dd|dl|dt|hr|li|ol|table|tbody|td|tfoot|th|thead|tr|ul)";
 	private static final String nonTextBodyTagPattern = "(dl|ol|table|tr|ul)";
 	private static final String nonInlineTagPattern = "(caption|dd|div|dl|dt|hr|li|ol|p|table|td|th|tr|ul)";
 	private static final String nonInlineTagStartPattern = "<" + nonInlineTagPattern + ">.*";
@@ -56,7 +56,7 @@ public class JFlexParserUtil {
 			JAVASCRIPT_PATTERN1 = Pattern.compile("( on[^=]{3,}=)+", Pattern.CASE_INSENSITIVE);
 			// catch script insertions that use a javascript url
 			JAVASCRIPT_PATTERN2 = Pattern.compile("(javascript[ ]*\\:)+", Pattern.CASE_INSENSITIVE);
-			NESTING_TAG_PATTERN = Pattern.compile(nestingTagPattern, Pattern.CASE_INSENSITIVE);
+			NON_NESTING_TAG_PATTERN = Pattern.compile(nonNestingTagPattern, Pattern.CASE_INSENSITIVE);
 			NON_TEXT_BODY_TAG_PATTERN = Pattern.compile(nonTextBodyTagPattern, Pattern.CASE_INSENSITIVE);
 			NON_INLINE_TAG_PATTERN = Pattern.compile(nonInlineTagPattern, Pattern.CASE_INSENSITIVE);
 			NON_INLINE_TAG_START_PATTERN = Pattern.compile(nonInlineTagStartPattern, Pattern.CASE_INSENSITIVE | Pattern.DOTALL);
@@ -99,11 +99,11 @@ public class JFlexParserUtil {
 	}
 
 	/**
-	 * A nesting tag is a tag such as "div" which can be nested within
-	 * another "div" tag.  Most tags do not allow direct nesting.
+	 * A non-nesting tag is a tag such as "li" which cannot be nested within
+	 * another "li" tag.
 	 */
-	protected static boolean isNestingTag(String tagType) {
-		Matcher matcher = NESTING_TAG_PATTERN.matcher(tagType);
+	protected static boolean isNonNestingTag(String tagType) {
+		Matcher matcher = NON_NESTING_TAG_PATTERN.matcher(tagType);
 		return matcher.matches();
 	}
 
